--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
 
     <form id="form" action="#">
       <div id="meme-image">
-        <input id="image" type="text" placeholder="Image-Address">
-        <input id="preview-image-button" type="button" value="Set">
+        
       </div>
 
-      <div id="top-input" hidden>
+      <div id="top-input">
         <input id="top" type="text" placeholder="Top-Text">
-        <input id="preview-top-text" type="button" value="Set">
       </div>
 
-      <div id="bottom-input" hidden>
+      <div id="bottom-input">
         <input id="bottom" type="text" placeholder="Bottom-Text">
-        <input id="preview-bottom-text" type="button" value="Set">
       </div>
 
-      <div id="submit-div" hidden>
+      <div id="submit-div">
         <input id="submit" type="submit" value="Generate New Meme">
       </div>
     </form>
